--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Portfolio - Interests</title>
+        <title>Portfolio - about</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -44,42 +44,29 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand"><a href="#">Patsy Doherty</a>
-                <div class="title"> - hat designer - </div>
+                <div class="navbar-brand"><a href="#">Venus Hugo</a>
+                <div class="title">Web designer and developer.</div>
                 </div>
 
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="index.html">Home1</a>
-                            </li>
-                            <li>
-                                <a href="index-work.html">Home2</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="active">
-                       <a href="about.html">About</a>
+                   <li>
+                        <a href="index.html">Home<b></b></a>
                     </li>
                     <li>
-                       <a href="services.html">Services</a>
+                       <a href="about.html">About </a>
                     </li>
                     <li>
-                       <a href="collection.html">Collection</a>
+                       <a href="my-work.html">My Works</a>
                     </li>
                     <li>
-                       <a  href="resume.html">Resume</a>
+                      <a  href="education.html">Education</a>
                     </li>
+
                     <li>
-                       <a href="news.html">News</a>
-                    </li>
-                    <li>
-                       <a href="contact.html">Contact</a>
+                      <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -95,24 +82,20 @@
                <h3 class="heading-inner">About</h3>
                   <div class="hr"></div>
                     <h4>
-                    <span class="text-about">Some hats can only be worn</span> if you're willing to be jaunty, to set them at an angle and to walk beneath them with a spring in your stride as if you're only a step away from dancing. They demand a lot of you.
+                    <span class="text-about">A little bit about me...</span> When I first started out creating websites, I was lost and confused. But as began to understand the languge of creating websites, I grew to like not only creating websites but also desinging them.
                     </h4>
 
                     <h4>
-                    <span class="text-about"> The right hat may also enliven our</span> imagination of the past...an old-fashioned cloche, a picture hat, or a toque trimmed with a pouf of polka-dotted veiling is just enough to make us feel as if we were living in another, romantic age.
+                    <span class="text-about">My favorites...</span>I love the color blue and I love to eat chocolate and my grandma's food.
                     </h4>
 
-                    <h4>
-                    <span class="text-about">Some hats can only be worn</span> if you're willing to be jaunty, to set them at an angle and to walk beneath them with a spring in your stride as if you're only a step away from dancing. They demand a lot of you.</h4>
-                    <h4>
-                    <span class="text-about">Wearing hats has become like fine art.</span></h4>
 
              </div>
              <!-- End left column -->
 
              <!-- Start right image -->
              <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-               <img src="img/about1.jpg" alt="" class="photo-about"/>
+               <img src="img/hi.png" alt="" class="photo-about"/>
              </div>
              <!-- End right image -->
          </div>
@@ -122,60 +105,7 @@
          </div>
 
 
-         <!-- Start margin -->
-         <div class="margin-about">
-         <!-- Start right image -->
-             <div class="col-md-6 wow fadeIn col-md-offset-1" data-wow-delay="0.1s">
-               <img src="img/about.jpg" alt="" class="photo-about"/>
-             </div>
-             <!-- End right image -->
-             <!-- Start left column -->
-             <div class="box-about col-md-4">
-               <h3 class="heading-inner">My process</h3>
-                  <div class="hr"></div>
-                    <div class="media">
-                   <div class="pull-left">
-                       <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-star fa-stack-1x fa-inverse"></i>
-                       </span>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Process 1</h4>
-                       <p>SOME HATS CAN ONLY BE WORN if you're willing to be jaunty, to set them at an angle and to walk beneath them with a spring. </p>
-                   </div>
-               </div>
-               <div class="media">
-                   <div class="pull-left">
-                       <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
-                       </span>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Process 2</h4>
-                       <p>SOME HATS CAN ONLY BE WORN if you're willing to be jaunty, to set them at an angle and to walk beneath them with a spring. </p>
-                   </div>
-               </div>
-               <div class="media">
-                   <div class="pull-left">
-                       <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-anchor fa-stack-1x fa-inverse"></i>
-                       </span>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Process 3</h4>
-                      <p>SOME HATS CAN ONLY BE WORN if you're willing to be jaunty, to set them at an angle and to walk beneath them with a spring. </p>
-                   </div>
-              </div>
-
-             </div>
-             <!-- End left column -->
-
-
-         </div>
-         <!-- End margin -->
+      
 
 
          <!-- Start footer -->
