--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                    <li>
-                        <a href="index.html">Home<b class="caret"></b></a>
-
-
+                        <a href="index.html">Home<b></b></a>
                     </li>
                     <li>
                        <a href="about.html">About</a>
@@ -85,7 +83,7 @@
 
                   </h2>
                   <div class="text-center">
-                     <a href="my-work.html" class="home-btn btn">View My Websites</a>
+                     <a href="my-work.html" class="home-btn btn">View My Work</a>
                   </div>
 
           </div>
@@ -105,7 +103,7 @@
              <div class="first">
              <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
              </div>
-             <img src="img/photo.jpg" alt="img" class="photo-home"/>
+             <img src="img/web-design.jpg" alt="img" class="photo-home"/>
           </div>
           <!-- End right image -->
 
