--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Portfolio-educatiom</title>
+        <title>Portfolio-education</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -18,8 +18,7 @@
         <link href="css/animate.css" rel="stylesheet">
 
         <!-- Google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley" />
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Qwigley&display=swap" rel="stylesheet">
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -80,91 +79,50 @@
          <div class="margin-resume wow fadeIn" data-wow-delay="0.1s">
                <h3 class="heading-inner">Education</h3>
                   <div class="hr"></div>
+                  <img src="img/school.png" alt="img" class="education-image"/>
+
                   <!--EDUCATION DESCRIPTION -->
 	              <div class="container desc">
 		            <div class="row">
+
 				      <div class="col-lg-2 col-lg-offset-1">
 					    <h4>Education</h4>
 				      </div>
 				      <div class="col-lg-6">
-					    <p><span class="e-heading">Master of Costume design</span><br/>
-						London College <br/>
-						3 Years Course
+					    <p><span class="e-heading">Sophmore Year</span><br/>
+					Honor	Web Design <br/>
+
 					    </p>
 				      </div>
 				      <div class="col-lg-3">
-					    <p><span class="date">GRADUATED IN MAY 2008</span><br/>
+					    <p><span class="date">Finished June 2020</span><br/>
 					    </p>
 				      </div>
 				      <div class="col-lg-6 col-lg-offset-3">
-					    <p><span class="e-heading">Degree of Costume design</span><br/>
-						University of Virginia <br/>
-						2 Years Course
+					    <p><span class="e-heading">Junior Year</span><br/>
+						Advanced Web Development
 					    </p>
 				      </div>
 				      <div class="col-lg-3">
-					   <p><span class="date">GRADUATED IN JUNE 2013</span></p>
+					   <p><span class="date">Finished JUNE 2021</span></p>
 				      </div>
+              <div class="col-lg-6 col-lg-offset-3">
+					    <p><span class="e-heading">Currently: Senior Year</span><br/>
+						NJIT Advanced Web Development
+					    </p>
+				      </div>
+				      <div class="col-lg-3">
+					   <p><span class="date"> Will Finish JUNE 2022</span></p>
+				      </div>
+
 		            </div><!-- /row -->
 		            <br>
 		            <div class="line-symbol"></div>
 	              </div><!-- /container -->
 
 
-	              <!--WORK DESCRIPTION -->
-	              <div class="container desc">
-		             <div class="row">
-				        <div class="col-lg-2 col-lg-offset-1">
-					    <h4>Work</h4>
-				        </div>
-				        <div class="col-lg-6">
-					      <p><span class="e-heading">Costume designer</span><br/>
-						 London theatre <br/>
-					     </p>
-					     <p><span class="more">The human head is a constantly moving and turning pedestal...with the hat a sculpture.</span></p>
-				        </div>
-				        <div class="col-lg-3">
-					     <p><span class="date">September 2010</span></p>
-				        </div>
-				        <div class="col-lg-6 col-lg-offset-3">
-					     <p><span class="e-heading">Hat designer</span><br/>
-						 NY TV Series<br/>
-					     </p>
-					     <p><span class="more">The human head is a constantly moving and turning pedestal...with the hat a sculpture.</span></p>
-				       </div>
-				       <div class="col-lg-3">
-					    <p><span class="date">OCTOBER 2012</span></p>
-				       </div>
-                       <div class="col-lg-6 col-lg-offset-3">
-					     <p><span class="e-heading">Hat designer</span><br/>
-						 Boston Theatre <br/>
-					     </p>
-					     <p><span class="more">The human head is a constantly moving and turning pedestal...with the hat a sculpture.</span></p>
-				       </div>
-				       <div class="col-lg-3">
-					    <p><span class="date">SEPTEMBER 2013</span></p>
-				       </div>
-                       <div class="col-lg-6 col-lg-offset-3">
-					        <p><span class="e-heading">Costume designer</span><br/>
-						    London Theatre<br/>
-					        </p>
-					        <p><span class="more">The human head is a constantly moving and turning pedestal...with the hat a sculpture.</span></p>
-				      </div>
-				      <div class="col-lg-3">
-					    <p><span class="date">AUGUST 2014</span></p>
-				      </div>
-                       <div class="col-lg-6 col-lg-offset-3">
-					        <p><span class="e-heading">Costume designer</span><br/>
-						   London Theatre<br/>
-					        </p>
-					        <p><span class="more">The human head is a constantly moving and turning pedestal...with the hat a sculpture.</span></p>
-				      </div>
-				      <div class="col-lg-3">
-					    <p><span class="date">OCTOBER 2014 - present</span></p>
-				      </div>
-		           </div><!-- /row -->
-		           <br>
-		          <div class="line-symbol"></div>
+
+
 	              </div><!-- /container -->
 
 
@@ -172,33 +130,44 @@
 	              <div class="container desc">
 		            <div class="row">
 				      <div class="col-lg-2 col-lg-offset-1">
-					  <h4>Awards</h4>
+					  <h4>Education Tools</h4>
 				      </div>
 				      <div class="col-lg-6">
-					      <p><span class="e-heading">Costume designer</span><br/>
-						 Birmingham  Theatre <br/>
+					      <p><span class="e-heading">Free Code Camp</span><br/>
+						  <br/>
 					      </p>
 				      </div>
 				      <div class="col-lg-3">
-					    <p><span class="date">NOVEMBER 2012</span></p>
+					    <p><span class="date">Used all years</span></p>
 				      </div>
 				      <div class="col-lg-6 col-lg-offset-3">
-					    <p><span class="e-heading">Best hat designer</span><br/>
-                         UK TV Series
+					    <p><span class="e-heading">Codecademy </span><br/>
+
 					    </p>
 				      </div>
 				      <div class="col-lg-3">
-					    <p><span class="date">MAY 2014</span></p>
+					    <p><span class="date">Used all years</span></p>
 				      </div>
 
                       <div class="col-lg-6 col-lg-offset-3">
-					    <p><span class="e-heading">Best hat designer</span><br/>
-                        NY Theatre
+					    <p><span class="e-heading">Codesandbox</span><br/>
+
 					    </p>
 				      </div>
 				      <div class="col-lg-3">
-					     <p><span class="date">September 2014</span></p>
+					     <p><span class="date">Used all years</span></p>
 				      </div>
+              <div class="col-lg-6 col-lg-offset-3">
+             <p><span class="e-heading">Atom </span><br/>
+
+             </p>
+             </div>
+             <div class="col-lg-3">
+             <p><span class="date">Used all years</span></p>
+             </div>
+
+
+
 		            </div><!-- /row -->
 		            <br>
 
