--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <link href="css/animate.css" rel="stylesheet">
 
         <!-- Google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley" />
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Qwigley&display=swap" rel="stylesheet">
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -76,12 +75,12 @@
 
          <!-- Start main image and the text below -->
          <div class="col-md-12 wow fadeIn" data-wow-delay="0.1s">
-              <img src="img/hi.png" alt="img" class="main-image"/>
+              <img src="img/hi02.png" alt="img" class="main-image"/>
 
-                  <h1 class="text-center">About Me</h1>
-                  <h2 class="text-center">Hi I'm Venus Hugo. I'm currently a senior at Freehold Boro High School. I design and create websites using HTML, CSS, and Javascript.
+                  <h1 class="text-center">Welcome</h1>
+                  <p class="text-center">Hey! I'm Venus Hugo. I'm currently a senior at Freehold Boro High School. I design and create websites using HTML, CSS, and Javascript.
 
-                  </h2>
+                  </p>
                   <div class="text-center">
                      <a href="my-work.html" class="home-btn btn">View My Work</a>
                   </div>
