--- a/my-work.html
+++ b/my-work.html
@@ -18,8 +18,7 @@
         <link href="css/animate.css" rel="stylesheet">
 
         <!-- Google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley" />
+          <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Qwigley&display=swap" rel="stylesheet">
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -45,8 +44,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand"><a href="">Patsy Doherty</a>
-                <div class="title"> - hat designer - </div>
+                <div class="navbar-brand"><a href="">Venus Hugo</a>
+                <div class="title"> web designer and developer. </div>
                 </div>
 
             </div>
@@ -74,6 +73,10 @@
          </nav>
          <!-- End nav -->
 
+         <div>
+           <h1 class="text-center">- My Works -</h1>
+
+
 
          <!-- Start Services -->
          <div class="margin-services">
@@ -84,7 +87,7 @@
                <img src="img/services1.jpg" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
-               <h4  class="heading-services"><a href="my-work.html" class="btn">Project 1</a></h4>
+               <h4  class="heading-services"><a href="https://vwilliams29.github.io/hugo-quarantine/" class="btn">Work 1</a></h4>
                <p>Quarantine Website</p>
              </div>
              <div class="col-md-7">
@@ -94,7 +97,7 @@
                <img src="img/services2.jpg" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
-               <h4  class="heading-services"><a href="my-work.html" class="btn">Project 2</a></h4>
+               <h4  class="heading-services"><a href="https://vwilliams29.github.io/homepage-css.io" class="btn">Work 2</a></h4>
                <p>Homepage </p>
              </div>
              <div class="col-md-7">
@@ -104,8 +107,18 @@
                 <img src="img/services3.jpg" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
-              <h4  class="heading-services"><a href="my-work.html" class="btn">Project 3</a></h4>
+              <h4  class="heading-services"><a href="https://vwilliams29.github.io/client-project.io/" class="btn">Work 3</a></h4>
                <p> Client Website </p>
+             </div>
+             <div class="col-md-7">
+                <div class="first-s">
+                 <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
+                </div>
+                <img src="img/services3.jpg" alt="photo" class="photo-services"/>
+             </div>
+             <div class="col-md-5">
+              <h4  class="heading-services"><a href="https://vwilliams29.github.io/product-website.io" class="btn">Work 4</a></h4>
+               <p> Product Website </p>
              </div>
          </div>
          <!-- End services -->
