--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
         <link href="css/animate.css" rel="stylesheet">
 
         <!-- Google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley" >
+          <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Qwigley&display=swap" rel="stylesheet">
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -95,7 +94,7 @@
 
              <!-- Start right image -->
              <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-               <img src="img/hi.png" alt="" class="photo-about"/>
+               <img src="img/chocolate.png" alt="" class="photo-about"/>
              </div>
              <!-- End right image -->
          </div>
@@ -105,7 +104,7 @@
          </div>
 
 
-      
+
 
 
          <!-- Start footer -->
