--- a/my-work.html
+++ b/my-work.html
@@ -84,7 +84,7 @@
                <div class="first-s">
                 <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
                </div>
-               <img src="img/services1.jpg" alt="photo" class="photo-services"/>
+               <img src="img/quarantine01.png" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
                <h4  class="heading-services"><a href="https://vwilliams29.github.io/hugo-quarantine/" class="btn">Work 1</a></h4>
@@ -94,7 +94,7 @@
                <div class="first-s">
                 <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
                </div>
-               <img src="img/services2.jpg" alt="photo" class="photo-services"/>
+               <img src="img/homepage.png" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
                <h4  class="heading-services"><a href="https://vwilliams29.github.io/homepage-css.io" class="btn">Work 2</a></h4>
@@ -104,7 +104,7 @@
                 <div class="first-s">
                  <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
                 </div>
-                <img src="img/services3.jpg" alt="photo" class="photo-services"/>
+                <img src="img/music.png" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
               <h4  class="heading-services"><a href="https://vwilliams29.github.io/client-project.io/" class="btn">Work 3</a></h4>
@@ -114,7 +114,7 @@
                 <div class="first-s">
                  <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
                 </div>
-                <img src="img/services3.jpg" alt="photo" class="photo-services"/>
+                <img src="img/product.png" alt="photo" class="photo-services"/>
              </div>
              <div class="col-md-5">
               <h4  class="heading-services"><a href="https://vwilliams29.github.io/product-website.io" class="btn">Work 4</a></h4>
