--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,9 @@
                        <a href="about.html">About </a>
                     </li>
                     <li>
+                       <a href="interests.html">Interests </a>
+                    </li>
+                    <li>
                        <a href="my-work.html">My Works</a>
                     </li>
                     <li>
@@ -95,8 +98,8 @@
 		            </div>
                     <h6><strong>Address:</strong> Freehold Boro High School
                     <span><strong>Tel: </strong>+44 (0)333 222 3333</span>
-                    <span><strong>Email: </strong><a href="122VHugoWilliams@frhsd.com"> 122VHugoWilliams@frhsd.com
-                    </a></span>
+                    <span><strong>Email: </strong><address><a href="122VHugoWilliams@frhsd.com"> 122VHugoWilliams@frhsd.com
+                    </a></address></span>
                     <span><strong>Working hours: </strong>Mon-Fri: 7:30am/2:06pm</span></h6>
              </div>
              <!-- End left column -->
