--- a/education.html
+++ b/education.html
@@ -59,6 +59,9 @@
                        <a href="about.html">About </a>
                     </li>
                     <li>
+                       <a href="interests.html">Interests </a>
+                    </li>
+                    <li>
                        <a href="my-work.html">My Works</a>
                     </li>
                     <li>
@@ -69,7 +72,7 @@
                       <a href="contact.html">Contact</a>
                     </li>
                 </ul>
-            </div>
+              </div>
             <!-- /navbar-collapse -->
          </nav>
          <!-- End nav -->
@@ -79,7 +82,7 @@
          <div class="margin-resume wow fadeIn" data-wow-delay="0.1s">
                <h3 class="heading-inner">Education</h3>
                   <div class="hr"></div>
-                  <img src="img/school.png" alt="img" class="education-image"/>
+                  
 
                   <!--EDUCATION DESCRIPTION -->
 	              <div class="container desc">
