--- a/interests.html
+++ b/interests.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-        <title>Portfolio- My works</title>
+        <title>Portfolio - about</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -30,7 +29,7 @@
   	  <div class="col-md-12">
          <!-- Logo -->
          <div class="brand wow fadeIn" data-wow-delay="0.1s"> Venus Hugo
-           <div class="title"> web designer and developer. </div>
+           <div class="title"> Web designer and developer. </div>
          </div>
 
          <!-- Navigation -->
@@ -44,8 +43,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand"><a href="">Venus Hugo</a>
-                <div class="title"> web designer and developer. </div>
+                <div class="navbar-brand"><a href="#">Venus Hugo</a>
+                <div class="title">Web designer and developer.</div>
                 </div>
 
             </div>
@@ -72,69 +71,53 @@
                       <a href="contact.html">Contact</a>
                     </li>
                 </ul>
-              </div>
+            </div>
             <!-- /navbar-collapse -->
          </nav>
          <!-- End nav -->
 
-         <div>
-           <h1 class="text-center">- My Works -</h1>
+
+         <!-- Start margin -->
+         <div class="margin-about">
+             <!-- Start left column -->
+             <div class="box-about col-md-4 col-xs-offset-1">
+               <h3 class="heading-inner">Interests</h3>
+                  <div class="hr"></div>
+                    <h4>
+                    <span class="text-about">I would like to</span> pursue a career in designing and styling websites.
+                    </h4>
+
+                    <h4>
+                    <span class="text-about">Jobs I'm Interested in...</span> Web Designer/ Developer, Multimedia Designer or UI Designer.
+                    </h4>
 
 
+             </div>
+             <!-- End left column -->
 
-         <!-- Start Services -->
-         <div class="margin-services">
-             <div class="col-md-7">
-               <div class="first-s">
-                <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
-               </div>
-               <img src="img/quarantine01.png" alt="photo" class="photo-services"/>
+             <!-- Start right image -->
+             <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
+               <img src="img/school.png" alt="" class="education-image"/>
              </div>
-             <div class="col-md-5">
-               <h4  class="heading-services"><a href="https://vwilliams29.github.io/hugo-quarantine/" class="btn">Work 1</a></h4>
-               <p>Quarantine Website</p>
-             </div>
-             <div class="col-md-7">
-               <div class="first-s">
-                <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
-               </div>
-               <img src="img/homepage.png" alt="photo" class="photo-services"/>
-             </div>
-             <div class="col-md-5">
-               <h4  class="heading-services"><a href="https://vwilliams29.github.io/homepage-css.io" class="btn">Work 2</a></h4>
-               <p>Homepage </p>
-             </div>
-             <div class="col-md-7">
-                <div class="first-s">
-                 <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
-                </div>
-                <img src="img/music.png" alt="photo" class="photo-services"/>
-             </div>
-             <div class="col-md-5">
-              <h4  class="heading-services"><a href="https://vwilliams29.github.io/client-project.io/" class="btn">Work 3</a></h4>
-               <p> Client Website </p>
-             </div>
-             <div class="col-md-7">
-                <div class="first-s">
-                 <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
-                </div>
-                <img src="img/product.png" alt="photo" class="photo-services"/>
-             </div>
-             <div class="col-md-5">
-              <h4  class="heading-services"><a href="https://vwilliams29.github.io/product-website.io" class="btn">Work 4</a></h4>
-               <p> Product Website </p>
-             </div>
+
+             <!-- End right image -->
          </div>
-         <!-- End services -->
+         <!-- End margin -->
+
+         <div class="col-md-12">
+         </div>
+
+
+
 
 
          <!-- Start footer -->
          <div class="footer col-md-6 col-xs-offset-3">
-            <h5>Copyright 2016
-            <a href="#"><i class="fa fa-facebook fa-1x icon1"></i></a>
-            <a href="#"><i class="fa fa-twitter fa-1x icon1"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-1x icon1"></i></a>
-            </h5>
+              <h5>Copyright 2016
+              <a href="#"><i class="fa fa-facebook fa-1x icon1"></i></a>
+              <a href="#"><i class="fa fa-twitter fa-1x icon1"></i></a>
+              <a href="#"><i class="fa fa-instagram fa-1x icon1"></i></a>
+              </h5>
          </div>
          <!-- End footer -->
 
@@ -155,9 +138,9 @@
    <!-- Wow JavaScript -->
    <script src="js/wow.js"></script>
 
-   <script>
-   new WOW().init();
-   </script>
+    <script>
+    new WOW().init();
+    </script>
 
 
 </body>
