--- a/about.html
+++ b/about.html
@@ -58,6 +58,9 @@
                        <a href="about.html">About </a>
                     </li>
                     <li>
+                       <a href="interests.html">Interests </a>
+                    </li>
+                    <li>
                        <a href="my-work.html">My Works</a>
                     </li>
                     <li>
