--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                         <a href="index.html">Home<b></b></a>
                     </li>
                     <li>
-                       <a href="about.html">About</a>
+                       <a href="about.html">About </a>
+                    </li>
+                    <li>
+                       <a href="interests.html">Interests </a>
                     </li>
                     <li>
                        <a href="my-work.html">My Works</a>
