--- a/education.html
+++ b/education.html
@@ -71,8 +71,11 @@
                     <li>
                       <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                      <a href="socials.html">Socials</a>
+                    </li>
                 </ul>
-              </div>
+            </div>
             <!-- /navbar-collapse -->
          </nav>
          <!-- End nav -->
@@ -82,7 +85,7 @@
          <div class="margin-resume wow fadeIn" data-wow-delay="0.1s">
                <h3 class="heading-inner">Education</h3>
                   <div class="hr"></div>
-                  
+
 
                   <!--EDUCATION DESCRIPTION -->
 	              <div class="container desc">
