--- a/my-work.html
+++ b/my-work.html
@@ -71,8 +71,11 @@
                     <li>
                       <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                      <a href="socials.html">Socials</a>
+                    </li>
                 </ul>
-              </div>
+            </div>
             <!-- /navbar-collapse -->
          </nav>
          <!-- End nav -->
