--- a/socials.html
+++ b/socials.html
@@ -22,6 +22,8 @@
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
    </head>
    <body>
 
@@ -81,42 +83,29 @@
 
          <!-- Start main image and the text below -->
          <div class="col-md-12 wow fadeIn" data-wow-delay="0.1s">
-              <img src="img/hi02.png" alt="img" class="main-image"/>
+              <img src="img/phone.png" alt="img" class="main-image"/>
 
-                  <h1 class="text-center">Welcome</h1>
-                  <p class="text-center">Hey! I'm Venus Hugo. I'm currently a senior at Freehold Boro High School. I design and create websites using HTML, CSS, and Javascript.
+                  <h1 class="text-center">Follow Me </h1>
+                  <p class="text-center socials">
+
+                    <a href="#"><i class="fa fa-snapchat fa-1x icon1">princess.venus1</i></a>
+                    <a href="#"><i class="fa fa-pinterest fa-1x icon1">venushugo</i></a>
+                    <a href="#"><i class="fa fa-instagram fa-1x icon1">ve_.n._us</i></a>
 
                   </p>
                   <div class="text-center">
-                     <a href="my-work.html" class="home-btn btn">View My Work</a>
+                     <a href="contact.html" class="home-btn btn">Email Me</a>
                   </div>
 
           </div>
           <!-- End main image and the text below -->
 
-          <!-- Start left column -->
-          <div class="box-home col-md-4 col-xs-offset-1">
-               <h3>
-               <span class="text-left">When I first started out creating websites, I was lost and confused. But as began to understand the languge of creating websites, I grew to like not only creating websites but also desinging them. </span>
-               <a href="about.html">read more <i class="fa fa-angle-right"></i></a>
-               </h3>
-          </div>
-          <!-- End left column -->
-
-          <!-- Start right image -->
-          <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-             <div class="first">
-             <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
-             </div>
-             <img src="img/web-design.jpg" alt="img" class="photo-home"/>
-          </div>
-          <!-- End right image -->
 
           <!-- Start footer -->
           <div class="footer col-md-6 col-xs-offset-3">
              <h5>
-                 <a href="#"><i class="fa fa-facebook fa-1x icon1"></i></a>
-                 <a href="#"><i class="fa fa-twitter fa-1x icon1"></i></a>
+                 <a href="#"><i class="fa fa-snapchat fa-1x icon1"></i></a>
+                 <a href="#"><i class="fa fa-pinterest fa-1x icon1"></i></a>
                  <a href="#"><i class="fa fa-instagram fa-1x icon1"></i></a>
              </h5>
           </div>
