--- a/about.html
+++ b/about.html
@@ -70,6 +70,9 @@
                     <li>
                       <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                      <a href="socials.html">Socials</a>
+                    </li>
                 </ul>
             </div>
             <!-- /navbar-collapse -->
