--- a/my-work.html
+++ b/my-work.html
@@ -127,6 +127,26 @@
               <h4  class="heading-services"><a href="https://vwilliams29.github.io/product-website.io" class="btn">Work 4</a></h4>
                <p> Product Website </p>
              </div>
+             <div class="col-md-7">
+               <div class="first-s">
+                <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
+               </div>
+               <img src="img/rock.png" alt="photo" class="photo-services"/>
+             </div>
+             <div class="col-md-5">
+               <h4  class="heading-services"><a href="https://oq4wx.csb.app/" class="btn">Work 5</a></h4>
+               <p>Rock, Paper, Scissors Game</p>
+             </div>
+             <div class="col-md-7">
+               <div class="first-s">
+                <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
+               </div>
+               <img src="img/postcard.png" alt="photo" class="photo-services"/>
+             </div>
+             <div class="col-md-5">
+               <h4  class="heading-services"><a href="https://dmwum.csb.app/" class="btn">Work 6</a></h4>
+               <p>Postcard Generator</p>
+             </div>
          </div>
          <!-- End services -->
 
