--- a/my-work.html
+++ b/my-work.html
@@ -147,6 +147,16 @@
                <h4  class="heading-services"><a href="https://dmwum.csb.app/" class="btn">Work 6</a></h4>
                <p>Postcard Generator</p>
              </div>
+             <div class="col-md-7">
+               <div class="first-s">
+                <div class="square wow fadeInDown" data-wow-delay=".5s"></div>
+               </div>
+               <img src="img/bake.png" alt="photo" class="photo-services"/>
+             </div>
+             <div class="col-md-5">
+               <h4  class="heading-services"><a href="https://Independent-Website-VenusHugo.team-122.repl.co" class="btn">Work 6</a></h4>
+               <p>Bakery Website</p>
+             </div>
          </div>
          <!-- End services -->
 
